name:                FloatExpansion2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/FloatExpansion2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FloatExpansion
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall

foreign-library FloatExpansion2
  buildable:           True
  type:                native-shared
  if os(Windows)
    options: standalone
  other-modules:       FloatExpansionDLL
  build-depends:       base >=4.7 && < 5
                     , FloatExpansion2
                     , inline-r
  hs-source-dirs:      src-dll
  c-sources:           StartEnd.c
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/FloatExpansion2
